--- a/index.html
+++ b/index.html
@@ -2,10 +2,30 @@
 <head>
   <title>'qwe qweqe'</title>
   <link href="/css/style.css" rel="stylesheet" type="text/css">
+  <script src="/js/fontawesome-all.min.js" defer></script>
 </head>
 <body>
-  <header class="header">
-    <div class="header_inner"><a class="main-logo"><img src="../../img/db-logo.png"></a></div>
+  <header class="page-header">
+    <div class="page-header__inner">
+      <div class="page-header__top"><a class="main-logo"><img src="../../img/db-logo.png"></a>
+        <nav class="main-nav">
+          <ul class="main-nav__list">
+            <li class="main-nav__item"><a class="main-nav__link"></a></li>
+            <li class="main-nav__item"><a class="main-nav__link"></a></li>
+            <li class="main-nav__item"><a class="main-nav__link"></a></li>
+            <li class="main-nav__item"><a class="main-nav__link"></a></li>
+            <li class="main-nav__item"><a class="main-nav__link"></a></li>
+            <li class="main-nav__item"><a class="main-nav__create"></a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="introduction">
+        <div class="introduction__inner">
+          <p class="introduction__head">To Make Your Life Easier Take a Card</p>
+          <p class="introduction__caption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered There are many variations of passages of Lorem Ipsum randomised words which don't look even slightly believable.</p><a class="introduction__apply-btn"></a>
+        </div>
+      </div>
+    </div>
   </header>
   <main class="main"></main>
 </body>
