dividing on components/beginning header

--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
   <header class="page-header">
     <div class="page-header__inner">
       <div class="page-header__top"><a class="main-logo"><img src="../../img/db-logo.png"></a>
-        <nav class="main-nav">
-          <ul class="main-nav__list">
-            <li class="main-nav__item"><a class="main-nav__link">Cards</a></li>
-            <li class="main-nav__item"><a class="main-nav__link">Service</a></li>
-            <li class="main-nav__item"><a class="main-nav__link">Banking</a></li>
-            <li class="main-nav__item"><a class="main-nav__link">Faq</a></li>
-            <li class="main-nav__item"><a class="main-nav__link">Contacts</a></li>
-            <li class="main-nav__item"><a class="main-nav__create">Create Account</a></li>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link">Cards</a></li>
+            <li class="nav__item"><a class="nav__link">Service</a></li>
+            <li class="nav__item"><a class="nav__link">Banking</a></li>
+            <li class="nav__item"><a class="nav__link">Faq</a></li>
+            <li class="nav__item"><a class="nav__link">Contacts</a></li>
+            <li class="nav__item"><a class="nav__link">Create Account</a></li>
           </ul>
         </nav>
       </div>
-      <div class="introduction">
-        <div class="introduction__inner">
-          <p class="introduction__head">To Make Your Life Easier Take a Card</p>
-          <p class="introduction__caption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered There are many variations of passages of Lorem Ipsum randomised words which don't look even slightly believable.</p><a class="introduction__apply-btn"></a>
-        </div>
-      </div>
     </div>
   </header>
+  <div class="hero">
+    <div class="hero__inner">
+      <p class="hero__head">To Make Your Life Easier Take a Card</p>
+      <p class="hero__caption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered There are many variations of passages of Lorem Ipsum randomised words which don't look even slightly believable.</p><a class="hero__apply-btn"></a>
+    </div>
+  </div>
   <main class="main">
     <section class="section section__process">
       <div class="section__content">
