--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <header class="page-header">
     <div class="page-header__inner">
       <div class="page-header__top"><a class="main-logo"><img src="../../img/db-logo.png"></a>
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link">Cards</a></li>
-            <li class="nav__item"><a class="nav__link">Service</a></li>
-            <li class="nav__item"><a class="nav__link">Banking</a></li>
-            <li class="nav__item"><a class="nav__link">Faq</a></li>
-            <li class="nav__item"><a class="nav__link">Contacts</a></li>
-            <li class="nav__item"><a class="nav__link">Create Account</a></li>
-          </ul>
+        <nav>
+            <ul class="nav">
+              <li class="nav__item"><a class="nav__link">Cardsqqqqqq</a></li>
+              <li class="nav__item"><a class="nav__link">Service</a></li>
+              <li class="nav__item"><a class="nav__link">Banking</a></li>
+              <li class="nav__item"><a class="nav__link">Faq</a></li>
+              <li class="nav__item"><a class="nav__link">Contacts</a></li>
+              <li class="nav__item"><a class="nav__link">Create Account</a></li>
+            </ul>
         </nav>
       </div>
     </div>
@@ -28,62 +28,62 @@
     </div>
   </div>
   <main class="main">
-    <section class="section section__process">
-      <div class="section__content">
-        <div class="section__header">
+    <section class="section process">
+      <div class="process__content">
+        <div class="process__header">
           <h2>Easy process</h2>
           <p>to get a credit card</p>
         </div>
-        <div class="section__features">
-          <div class="section__features-item"><span class="section__feature-name">Online application</span>
-            <p class="section__feature-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
+        <div class="process__features">
+          <div class="process__features-item"><span class="process__feature-name">Online application</span>
+            <p class="process__feature-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
           </div>
-          <div class="section__features-item"><span class="section__feature-name">Get approval</span>
-            <p class="section__feature-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
+          <div class="process__features-item"><span class="process__feature-name">Get approval</span>
+            <p class="process__feature-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
           </div>
-          <div class="section__features-item"><span class="section__feature-name">Get your card</span>
-            <p class="section__feature-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
+          <div class="process__features-item"><span class="process__feature-name">Get your card</span>
+            <p class="process__feature-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
           </div>
         </div>
       </div>
     </section>
-    <section class="section section__benefits">
-      <div class="section__media section__benefits-video"></div>
-      <div class="section__content">
-        <div class="section__header">
+    <section class="section benefits">
+      <div class="benefits__media benefits__benefits-video"></div>
+      <div class="benefits__content">
+        <div class="benefits__header">
           <h2>It's easy to use</h2>
           <p>Benefits credit card</p>
         </div>
-        <div class="section__benefits">
-          <div class="section__benefits-item"><span class="section__benefits-name">Online application</span>
-            <p class="section__benefits-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
+        <div class="benefits__benefits">
+          <div class="benefits__benefits-item"><span class="benefits__benefits-name">Online application</span>
+            <p class="benefits__benefits-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
           </div>
-          <div class="section__benefits-item"><span class="section__benefits-name">Get approval</span>
-            <p class="section__benefits-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
+          <div class="benefits__benefits-item"><span class="benefits__benefits-name">Get approval</span>
+            <p class="benefits__benefits-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
           </div>
-          <div class="section__benefits-item"><span class="section__benefits-name">Get your card</span>
-            <p class="section__benefits-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
+          <div class="benefits__benefits-item"><span class="benefits__benefits-name">Get your card</span>
+            <p class="benefits__benefits-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
           </div>
-          <div class="section__benefits-item"><span class="section__benefits-name">Get your card</span>
-            <p class="section__benefits-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
+          <div class="benefits__benefits-item"><span class="benefits__benefits-name">Get your card</span>
+            <p class="benefits__benefits-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
           </div>
-          <div class="section__benefits-item"><span class="section__benefits-name">Get your card</span>
-            <p class="section__benefits-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
+          <div class="benefits__benefits-item"><span class="benefits__benefits-name">Get your card</span>
+            <p class="benefits__benefits-text">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
           </div>
         </div>
-      </div><a class="section__readmore" href="#">Read more</a>
+      </div><a class="benefits__readmore" href="#">Read more</a>
     </section>
-    <section class="section section__service">
-      <div class="section__content">
-        <div class="section__header">
+    <section class="section service">
+      <div class="sservice__content">
+        <div class="sservice__header">
           <h2>It's easy to use</h2>
           <p>Benefits credit card</p>
         </div>
-        <div class="section__services section__slider slider">
-          <div class="slider__elem"><a href="#"><img src="../../img/services-balance.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Balance transform</span></a></div>
-          <div class="slider__elem"><a href="#"><img src="../../img/services-banking.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Internet banking</span></a></div>
-          <div class="slider__elem"><a href="#"><img src="../../img/services-payment.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Buying payment</span></a></div>
-          <div class="slider__elem"><a href="#"><img src="../../img/services-tikets.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Balance transform</span></a></div>
+        <div class="sservice__services sservice__slider slider">
+          <div class="service__elem"><a href="#"><img src="../../img/services-balance.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Balance transform</span></a></div>
+          <div class="service__elem"><a href="#"><img src="../../img/services-banking.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Internet banking</span></a></div>
+          <div class="service__elem"><a href="#"><img src="../../img/services-payment.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Buying payment</span></a></div>
+          <div class="service__elem"><a href="#"><img src="../../img/services-tikets.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Balance transform</span></a></div>
         </div>
       </div>
     </section>
