several steps. js, css and graph bundles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <head>
   <title>Digital Banking</title>
-  <link href="../dist/main.bundle.css" rel="stylesheet">
-  <script src="minjs/fontawesome-all.min.js"></script>
+  <link href="static/css/style.css" rel="stylesheet">
+  <!--<script src="minjs/fontawesome-all.min.js"></script>-->
+  <script src="../dist/main.js" defer></script>
 </head>
 <body>
   <header class="header">
     <div class="header__container">
-      <div class="header__top"><a class="main-logo"><img class="logo-img" alt="logo" width="200" height="100"></a>
+      <div class="header__top"><a class="main-logo"><img src="static/img/db-logo.png" alt="logo" width="200" height="100"></a>
         <nav>
                   <ul class="nav">
                     <li class="nav__item"><a class="nav__link">Cards</a></li>
@@ -80,7 +81,7 @@
           <p>Benefits credit card</p>
         </div>
         <div class="service__services sservice__slider slider">
-          <div class="service__elem"><a href="#"><img class="service__elem-img" alt="Balance" width="270" height="270"><span class="section__services-name">Balance transform</span></a></div>
+          <div class="service__elem"><a href="#"><img src="static/img/services-balance.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Balance transform</span></a></div>
           <div class="service__elem"><a href="#"><img src="static/img/services-banking.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Internet banking</span></a></div>
           <div class="service__elem"><a href="#"><img src="static/img/services-payment.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Buying payment</span></a></div>
           <div class="service__elem"><a href="#"><img src="static/img/services-tikets.jpg" alt="Balance" width="270" height="270"><span class="section__services-name">Balance transform</span></a></div>
@@ -214,5 +215,4 @@
       </div>
     </footer>
   </main>
-<script src="../dist/bundle.js"></script>
 </body>
